--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ stages:
       steps: 
       - script: dotnet restore
         displayName: restore
-      - script: dptnet build
+      - script: dotnet build
         displayName: build
       - script: dotnet test
         displayName: test
